# email-uplift-causal

./: .gitignore  README.md  pyproject.toml
notebooks/: 01_eda_randomization.ipynb  02_ab_analysis.ipynb  03_uplift_modeling.ipynb  04_targeting_policy.ipynb  05_did.ipynb
src/causal/: did.py
src/data/: features.py  load.py
src/evaluation/: plots.py
src/experiment/: ab.py
src/uplift/: learners.py  policy_evaluation.py
tests/: test_did.py  test_experiment.py  test_policy_evaluation.py  test_uplift.py
